@@ -28,6 +28,10 @@ import os                                      # don't remove
 
 # CONFIRM_REQUEST_TEMPLATE = "/full/path/to/confirm_request.txt"
 
+# DATED_TEMPLATE_VARS = 0
+
+# SENDER_TEMPLATE_VARS = 0
+
 # COOKIE_TYPE = "dated"
 
 # CRYPT_KEY = "95b76bbc4b747cuid8963264151a6bfae394" # generate your own key
